2007-01-08  Wang Xin  <jedy.wang@sun.com>
	
	Fixes #389966
	* gui/e-cal-model-tasks.c: (set_status):
	Do not create the status property if its pointing to None.

2007-01-08  Wang Xin  <jedy.wang@sun.com>

	Fixes #389961
	* gui/e-cal-model.c: (e_cal_model_set_instance_times):
	Check if the item is a event before processing the end time.

2006-12-04  Matthew Barnes  <mbarnes@redhat.com>

	Fixes bug #357970

	* gui/e-alarm-list.c:
	* gui/e-calendar-table.c:
	* gui/e-day-view.c:
	* gui/e-meeting-attendee.c:
	* gui/e-meeting-store.c:
	* gui/e-meeting-time-sel-item.c:
	* gui/e-meeting-time-sel.c:
	* gui/e-week-view-main-item.c:
	* gui/e-week-view.c:
	* gui/gnome-cal.c:
	* gui/goto.c:
	* gui/dialogs/event-page.c:
	* gui/dialogs/task-page.c:
	Don't call deprecated GLib / GDK functions.

2006-12-04 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	Fixes #270751.
	Adds support for command line uri in tasks.
	* gui/GNOME_Evolution_Calendar.server.in.in: Added the specification
	for task uri.
	* gui/e-calendar-table.c: (e_calendar_table_open_selected),
	(e_calendar_table_open_task), (open_task_by_row),
	(e_calendar_table_on_open_task), (e_calendar_table_on_assign):
	* gui/e-calendar-table.h:
	* gui/tasks-control.c: (tasks_control_assign_cmd): 
	* gui/e-tasks.c: (e_tasks_open_task_id):
	* gui/e-tasks.h: Pass just the required arguments.
	* gui/tasks-component.c: (impl_handleURI),
	(tasks_component_class_init): Implement the uri interface

2006-11-28  Wang Xin  <jedy.wang@sun.com>

	Fix for bug #380064

	* gui/alarm-notify/alarm-queue.c: (mail_notification): Only
	popup the dialog if calendar backend does not support
	email alarm.

2006-12-03  Harish Krishnaswamy  <kharish@novell.com>

	* gui/calendar-config.c:
	(calendar_config_get_icaltimezone): Fix leaks of
	'location' at various exit points. 

2006-11-28  Srinivasa Ragavan  <sragavan@novell.com>

	Added support to print/preview from Calendar Editor.

	* gui/dialogs/comp-editor.c: (menu_file_print_cb),
	(menu_file_print_preview_cb):